# src/api/generated-api/models/AuthEntity.ts
@@ -1,66 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Trackr
- * The Trackr API description
- *
- * The version of the OpenAPI document: 0.1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface AuthEntity
- */
-export interface AuthEntity {
-    /**
-     * 
-     * @type {string}
-     * @memberof AuthEntity
-     */
-    accessToken: string;
-}
-
-/**
- * Check if a given object implements the AuthEntity interface.
- */
-export function instanceOfAuthEntity(value: object): value is AuthEntity {
-    if (!('accessToken' in value) || value['accessToken'] === undefined) return false;
-    return true;
-}
-
-export function AuthEntityFromJSON(json: any): AuthEntity {
-    return AuthEntityFromJSONTyped(json, false);
-}
-
-export function AuthEntityFromJSONTyped(json: any, ignoreDiscriminator: boolean): AuthEntity {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'accessToken': json['accessToken'],
-    };
-}
-
-export function AuthEntityToJSON(json: any): AuthEntity {
-    return AuthEntityToJSONTyped(json, false);
-}
-
-export function AuthEntityToJSONTyped(value?: AuthEntity | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'accessToken': value['accessToken'],
-    };
-}
-
