# src/api/generated-api/models/CreateTrackDto.ts
@@ -1,117 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Trackr
- * The Trackr API description
- *
- * The version of the OpenAPI document: 0.1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface CreateTrackDto
- */
-export interface CreateTrackDto {
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateTrackDto
-     */
-    title: string;
-    /**
-     * 
-     * @type {Date}
-     * @memberof CreateTrackDto
-     */
-    date: Date;
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateTrackDto
-     */
-    startTime?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateTrackDto
-     */
-    endTime?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateTrackDto
-     */
-    duration: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateTrackDto
-     */
-    description?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateTrackDto
-     */
-    authorId: string;
-}
-
-/**
- * Check if a given object implements the CreateTrackDto interface.
- */
-export function instanceOfCreateTrackDto(value: object): value is CreateTrackDto {
-    if (!('title' in value) || value['title'] === undefined) return false;
-    if (!('date' in value) || value['date'] === undefined) return false;
-    if (!('duration' in value) || value['duration'] === undefined) return false;
-    if (!('authorId' in value) || value['authorId'] === undefined) return false;
-    return true;
-}
-
-export function CreateTrackDtoFromJSON(json: any): CreateTrackDto {
-    return CreateTrackDtoFromJSONTyped(json, false);
-}
-
-export function CreateTrackDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateTrackDto {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'title': json['title'],
-        'date': (new Date(json['date'])),
-        'startTime': json['startTime'] == null ? undefined : json['startTime'],
-        'endTime': json['endTime'] == null ? undefined : json['endTime'],
-        'duration': json['duration'],
-        'description': json['description'] == null ? undefined : json['description'],
-        'authorId': json['authorId'],
-    };
-}
-
-export function CreateTrackDtoToJSON(json: any): CreateTrackDto {
-    return CreateTrackDtoToJSONTyped(json, false);
-}
-
-export function CreateTrackDtoToJSONTyped(value?: CreateTrackDto | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'title': value['title'],
-        'date': ((value['date']).toISOString()),
-        'startTime': value['startTime'],
-        'endTime': value['endTime'],
-        'duration': value['duration'],
-        'description': value['description'],
-        'authorId': value['authorId'],
-    };
-}
-
