# src/api/generated-api/models/CreateUserDto.ts
@@ -1,84 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Trackr
- * The Trackr API description
- *
- * The version of the OpenAPI document: 0.1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface CreateUserDto
- */
-export interface CreateUserDto {
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateUserDto
-     */
-    email: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateUserDto
-     */
-    name: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CreateUserDto
-     */
-    password: string;
-}
-
-/**
- * Check if a given object implements the CreateUserDto interface.
- */
-export function instanceOfCreateUserDto(value: object): value is CreateUserDto {
-    if (!('email' in value) || value['email'] === undefined) return false;
-    if (!('name' in value) || value['name'] === undefined) return false;
-    if (!('password' in value) || value['password'] === undefined) return false;
-    return true;
-}
-
-export function CreateUserDtoFromJSON(json: any): CreateUserDto {
-    return CreateUserDtoFromJSONTyped(json, false);
-}
-
-export function CreateUserDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): CreateUserDto {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'email': json['email'],
-        'name': json['name'],
-        'password': json['password'],
-    };
-}
-
-export function CreateUserDtoToJSON(json: any): CreateUserDto {
-    return CreateUserDtoToJSONTyped(json, false);
-}
-
-export function CreateUserDtoToJSONTyped(value?: CreateUserDto | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'email': value['email'],
-        'name': value['name'],
-        'password': value['password'],
-    };
-}
-
