# src/api/generated-api/models/UpdateUserDto.ts
@@ -1,81 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Trackr
- * The Trackr API description
- *
- * The version of the OpenAPI document: 0.1
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface UpdateUserDto
- */
-export interface UpdateUserDto {
-    /**
-     * 
-     * @type {string}
-     * @memberof UpdateUserDto
-     */
-    email?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof UpdateUserDto
-     */
-    name?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof UpdateUserDto
-     */
-    password?: string;
-}
-
-/**
- * Check if a given object implements the UpdateUserDto interface.
- */
-export function instanceOfUpdateUserDto(value: object): value is UpdateUserDto {
-    return true;
-}
-
-export function UpdateUserDtoFromJSON(json: any): UpdateUserDto {
-    return UpdateUserDtoFromJSONTyped(json, false);
-}
-
-export function UpdateUserDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): UpdateUserDto {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'email': json['email'] == null ? undefined : json['email'],
-        'name': json['name'] == null ? undefined : json['name'],
-        'password': json['password'] == null ? undefined : json['password'],
-    };
-}
-
-export function UpdateUserDtoToJSON(json: any): UpdateUserDto {
-    return UpdateUserDtoToJSONTyped(json, false);
-}
-
-export function UpdateUserDtoToJSONTyped(value?: UpdateUserDto | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'email': value['email'],
-        'name': value['name'],
-        'password': value['password'],
-    };
-}
-
