# src/api/generated-api/models/UserEntity.ts
@@ -1,86 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Trackr
- * The Trackr API description
- *
- * The version of the OpenAPI document: 0.1
- *
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- *
- * @export
- * @interface UserEntity
- */
-export interface UserEntity {
-  /**
-   *
-   * @type {string}
-   * @memberof UserEntity
-   */
-  email: string;
-  /**
-   *
-   * @type {string}
-   * @memberof UserEntity
-   */
-  id: string;
-  /**
-   *
-   * @type {string}
-   * @memberof UserEntity
-   */
-  name?: string | null;
-}
-
-/**
- * Check if a given object implements the UserEntity interface.
- */
-export function instanceOfUserEntity(value: object): value is UserEntity {
-  if (!('email' in value) || value['email'] === undefined) return false;
-  if (!('id' in value) || value['id'] === undefined) return false;
-  return true;
-}
-
-export function UserEntityFromJSON(json: any): UserEntity {
-  return UserEntityFromJSONTyped(json, false);
-}
-
-export function UserEntityFromJSONTyped(
-  json: any,
-  ignoreDiscriminator: boolean
-): UserEntity {
-  if (json == null) {
-    return json;
-  }
-  return {
-    email: json['email'],
-    id: json['id'],
-    name: json['name'] == null ? undefined : json['name'],
-  };
-}
-
-export function UserEntityToJSON(json: any): UserEntity {
-  return UserEntityToJSONTyped(json, false);
-}
-
-export function UserEntityToJSONTyped(
-  value?: UserEntity | null,
-  ignoreDiscriminator: boolean = false
-): any {
-  if (value == null) {
-    return value;
-  }
-
-  return {
-    email: value['email'],
-    id: value['id'],
-    name: value['name'],
-  };
-}
