# src/api/generated-api/models/index.ts
@@ -1,10 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export * from './AuthEntity';
-export * from './CreateTrackDto';
-export * from './CreateUserDto';
-export * from './LoginDto';
-export * from './TrackEntity';
-export * from './UpdateTrackDto';
-export * from './UpdateUserDto';
-export * from './UserEntity';
