# swagger.json
@@ -1,387 +1,1 @@
-{
-  "openapi": "3.0.0",
-  "paths": {
-    "/": {
-      "get": {
-        "operationId": "AppController_getHello",
-        "parameters": [],
-        "responses": { "200": { "description": "" } },
-        "tags": ["App"]
-      }
-    },
-    "/tracks": {
-      "post": {
-        "operationId": "TracksController_create",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/CreateTrackDto" }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/TrackEntity" }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Tracks"]
-      },
-      "get": {
-        "operationId": "TracksController_findAll",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": { "$ref": "#/components/schemas/TrackEntity" }
-                }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Tracks"]
-      }
-    },
-    "/tracks/{id}": {
-      "get": {
-        "operationId": "TracksController_findOne",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": { "type": "string" }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/TrackEntity" }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Tracks"]
-      },
-      "patch": {
-        "operationId": "TracksController_update",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": { "type": "string" }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/UpdateTrackDto" }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/TrackEntity" }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Tracks"]
-      },
-      "delete": {
-        "operationId": "TracksController_remove",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": { "type": "string" }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/TrackEntity" }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Tracks"]
-      }
-    },
-    "/users": {
-      "post": {
-        "operationId": "UsersController_create",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/CreateUserDto" }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/UserEntity" }
-              }
-            }
-          }
-        },
-        "tags": ["Users"]
-      },
-      "get": {
-        "operationId": "UsersController_findAll",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": { "$ref": "#/components/schemas/UserEntity" }
-                }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Users"]
-      }
-    },
-    "/users/{id}": {
-      "get": {
-        "operationId": "UsersController_findOne",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": { "type": "string" }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/UserEntity" }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Users"]
-      },
-      "patch": {
-        "operationId": "UsersController_update",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": { "type": "string" }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/UpdateUserDto" }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/UserEntity" }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Users"]
-      },
-      "delete": {
-        "operationId": "UsersController_remove",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": { "type": "string" }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/UserEntity" }
-              }
-            }
-          }
-        },
-        "security": [{ "bearer": [] }],
-        "tags": ["Users"]
-      }
-    },
-    "/auth/login": {
-      "post": {
-        "operationId": "AuthController_login",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/LoginDto" }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": { "$ref": "#/components/schemas/AuthEntity" }
-              }
-            }
-          }
-        },
-        "tags": ["Auth"]
-      }
-    }
-  },
-  "info": {
-    "title": "Trackr",
-    "description": "The Trackr API description",
-    "version": "0.1",
-    "contact": {}
-  },
-  "tags": [],
-  "servers": [],
-  "components": {
-    "securitySchemes": {
-      "bearer": { "scheme": "bearer", "bearerFormat": "JWT", "type": "http" }
-    },
-    "schemas": {
-      "CreateTrackDto": {
-        "type": "object",
-        "properties": {
-          "title": { "type": "string" },
-          "date": {
-            "format": "date-time",
-            "type": "string",
-            "default": "2025-01-27T18:49:10.498Z"
-          },
-          "startTime": { "type": "string" },
-          "endTime": { "type": "string" },
-          "duration": { "type": "string" },
-          "description": { "type": "string" },
-          "authorId": { "type": "string" }
-        },
-        "required": ["title", "date", "duration", "authorId"]
-      },
-      "UserEntity": {
-        "type": "object",
-        "properties": {
-          "email": { "type": "string" },
-          "id": { "type": "string" },
-          "name": { "type": "object", "nullable": true }
-        },
-        "required": ["email", "id"]
-      },
-      "TrackEntity": {
-        "type": "object",
-        "properties": {
-          "id": { "type": "string" },
-          "title": { "type": "string" },
-          "date": { "format": "date-time", "type": "string" },
-          "startTime": { "type": "object", "nullable": true },
-          "endTime": { "type": "object", "nullable": true },
-          "duration": { "type": "string" },
-          "description": { "type": "object", "nullable": true },
-          "author": { "$ref": "#/components/schemas/UserEntity" },
-          "authorId": { "type": "string" }
-        },
-        "required": ["id", "title", "date", "duration", "author", "authorId"]
-      },
-      "UpdateTrackDto": {
-        "type": "object",
-        "properties": {
-          "title": { "type": "string" },
-          "date": {
-            "format": "date-time",
-            "type": "string",
-            "default": "2025-01-27T18:49:10.498Z"
-          },
-          "startTime": { "type": "string" },
-          "endTime": { "type": "string" },
-          "duration": { "type": "string" },
-          "description": { "type": "string" },
-          "authorId": { "type": "string" }
-        }
-      },
-      "CreateUserDto": {
-        "type": "object",
-        "properties": {
-          "email": { "type": "string" },
-          "name": { "type": "string" },
-          "password": { "type": "string" }
-        },
-        "required": ["email", "name", "password"]
-      },
-      "UpdateUserDto": {
-        "type": "object",
-        "properties": {
-          "email": { "type": "string" },
-          "name": { "type": "string" },
-          "password": { "type": "string" }
-        }
-      },
-      "LoginDto": {
-        "type": "object",
-        "properties": {
-          "email": { "type": "string" },
-          "password": { "type": "string" }
-        },
-        "required": ["email", "password"]
-      },
-      "AuthEntity": {
-        "type": "object",
-        "properties": { "accessToken": { "type": "string" } },
-        "required": ["accessToken"]
-      }
-    }
-  }
-}
+{"openapi":"3.0.0","paths":{"/":{"get":{"operationId":"AppController_getHello","parameters":[],"responses":{"200":{"description":""}},"tags":["App"]}},"/tracks":{"post":{"operationId":"TracksController_create","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/CreateTrackDto"}}}},"responses":{"201":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/TrackEntity"}}}}},"tags":["Tracks"]},"get":{"operationId":"TracksController_findAll","parameters":[],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/TrackEntity"}}}}}},"tags":["Tracks"]}},"/tracks/{id}":{"get":{"operationId":"TracksController_findOne","parameters":[{"name":"id","required":true,"in":"path","schema":{"type":"string"}}],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/TrackEntity"}}}}},"tags":["Tracks"]},"patch":{"operationId":"TracksController_update","parameters":[{"name":"id","required":true,"in":"path","schema":{"type":"string"}}],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/UpdateTrackDto"}}}},"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/TrackEntity"}}}}},"tags":["Tracks"]},"delete":{"operationId":"TracksController_remove","parameters":[{"name":"id","required":true,"in":"path","schema":{"type":"string"}}],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/TrackEntity"}}}}},"tags":["Tracks"]}},"/users":{"post":{"operationId":"UsersController_create","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/CreateUserDto"}}}},"responses":{"201":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/UserEntity"}}}}},"tags":["Users"]},"get":{"operationId":"UsersController_findAll","parameters":[],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/UserEntity"}}}}}},"tags":["Users"]}},"/users/{id}":{"get":{"operationId":"UsersController_findOne","parameters":[{"name":"id","required":true,"in":"path","schema":{"type":"string"}}],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/UserEntity"}}}}},"tags":["Users"]},"patch":{"operationId":"UsersController_update","parameters":[{"name":"id","required":true,"in":"path","schema":{"type":"string"}}],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/UpdateUserDto"}}}},"responses":{"201":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/UserEntity"}}}}},"tags":["Users"]},"delete":{"operationId":"UsersController_remove","parameters":[{"name":"id","required":true,"in":"path","schema":{"type":"string"}}],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/UserEntity"}}}}},"tags":["Users"]}},"/auth/login":{"post":{"operationId":"AuthController_login","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/LoginDto"}}}},"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/AuthEntity"}}}}},"tags":["Auth"]}},"/auth/refresh":{"post":{"operationId":"AuthController_refreshToken","parameters":[],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/AuthEntity"}}}}},"tags":["Auth"]}},"/auth/signout":{"post":{"operationId":"AuthController_logout","parameters":[],"responses":{"201":{"description":""}},"tags":["Auth"]}}},"info":{"title":"Trackr","description":"The Trackr API description","version":"0.1","contact":{}},"tags":[],"servers":[],"components":{"securitySchemes":{"cookie":{"type":"apiKey","in":"cookie","name":"access_token"}},"schemas":{"CreateTrackDto":{"type":"object","properties":{"title":{"type":"string"},"date":{"format":"date-time","type":"string","default":"2025-02-18T22:44:40.674Z"},"startTime":{"type":"string"},"endTime":{"type":"string"},"duration":{"type":"string"},"description":{"type":"string"},"authorId":{"type":"string"}},"required":["title","date","duration","authorId"]},"UserEntity":{"type":"object","properties":{"email":{"type":"string"},"id":{"type":"string"},"name":{"type":"object","nullable":true}},"required":["email","id"]},"TrackEntity":{"type":"object","properties":{"id":{"type":"string"},"title":{"type":"string"},"date":{"format":"date-time","type":"string"},"startTime":{"type":"object","nullable":true},"endTime":{"type":"object","nullable":true},"duration":{"type":"string"},"description":{"type":"object","nullable":true},"author":{"$ref":"#/components/schemas/UserEntity"},"authorId":{"type":"string"}},"required":["id","title","date","duration","author","authorId"]},"UpdateTrackDto":{"type":"object","properties":{"title":{"type":"string"},"date":{"format":"date-time","type":"string","default":"2025-02-18T22:44:40.674Z"},"startTime":{"type":"string"},"endTime":{"type":"string"},"duration":{"type":"string"},"description":{"type":"string"},"authorId":{"type":"string"}}},"CreateUserDto":{"type":"object","properties":{"email":{"type":"string"},"name":{"type":"string"},"password":{"type":"string"}},"required":["email","name","password"]},"UpdateUserDto":{"type":"object","properties":{"email":{"type":"string"},"name":{"type":"string"},"password":{"type":"string"}}},"LoginDto":{"type":"object","properties":{"email":{"type":"string"},"password":{"type":"string"}},"required":["email","password"]},"AuthEntity":{"type":"object","properties":{"accessToken":{"type":"string"},"refreshToken":{"type":"string"},"user":{"type":"object"}},"required":["accessToken","refreshToken","user"]}}}}
